[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/Scripts/Experimental/MonsterAttackUI.gd" type="Script" id=1]

[node name="AttackUI" type="Control"]
margin_right = 795.0
margin_bottom = 598.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 795.0
margin_bottom = 598.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackLabelOne" type="Label" parent="Panel"]
margin_left = 248.0
margin_top = 36.0
margin_right = 525.0
margin_bottom = 67.0
text = "attack label one"

[node name="AttackOneAccept" type="Button" parent="Panel"]
margin_left = 585.58
margin_top = 36.0
margin_right = 604.58
margin_bottom = 56.0
text = "Y"

[node name="AttackLabelTwo" type="Label" parent="Panel"]
margin_left = 248.0
margin_top = 200.718
margin_right = 363.0
margin_bottom = 214.718
text = "attack label two"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackTwoAccept" type="Button" parent="Panel"]
margin_left = 589.0
margin_top = 200.718
margin_right = 608.0
margin_bottom = 220.718
text = "Y"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackLabelThree" type="Label" parent="Panel"]
margin_left = 248.0
margin_top = 369.977
margin_right = 361.0
margin_bottom = 383.977
text = "attack label three"

[node name="AttackThreeAccept" type="Button" parent="Panel"]
margin_left = 585.58
margin_top = 369.977
margin_right = 604.58
margin_bottom = 389.977
text = "Y"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skip" type="Button" parent="Panel"]
margin_left = 361.0
margin_top = 554.803
margin_right = 405.0
margin_bottom = 574.803
text = "Skip"

[node name="AttackOneScrollContainer" type="ScrollContainer" parent="Panel"]
margin_left = 248.0
margin_top = 67.0
margin_right = 613.0
margin_bottom = 191.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackOneScrollingText" type="Label" parent="Panel/AttackOneScrollContainer"]
margin_right = 350.0
margin_bottom = 100.0
rect_min_size = Vector2( 350, 100 )
autowrap = true

[node name="AttackTwoScrollContainer" type="ScrollContainer" parent="Panel"]
margin_left = 248.0
margin_top = 233.0
margin_right = 601.0
margin_bottom = 342.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackTwoScrollingText" type="Label" parent="Panel/AttackTwoScrollContainer"]
margin_right = 350.0
margin_bottom = 100.0
rect_min_size = Vector2( 350, 100 )

[node name="AttackThreeScrollContainer" type="ScrollContainer" parent="Panel"]
margin_left = 248.0
margin_top = 407.0
margin_right = 655.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackThreeScrollingText" type="Label" parent="Panel/AttackThreeScrollContainer"]
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
